src/test/ui/closure-expected-type/expect-infer-var-appearing-twice.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/expect-infer-var-appearing-twice.rs:14:5
   |
LL | fn with_closure<F, A>(_: F)
   |    ------------ required by a bound in this
LL |     where F: FnOnce(A, A)
   |              ------------ required by this bound in `with_closure`
...
LL |     with_closure(|x: u32, y: i32| {
   |     ^^^^^^^^^^^^ ---------------- found signature of `fn(u32, i32) -> _`
   |     |
   |     expected signature of `fn(_, _) -> _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
